Add domain page and charts renderer

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  margin-top: 24px;
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,7 +27,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
